tentando lembrar como q faz programa

--- a/Index.html
+++ b/Index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+<link rel="stylesheet" href="style.css">
 
 
 <head>
@@ -8,7 +9,10 @@
 
 
 <body>
-    <h1>Hello World!</h1>
+    <div id="painel">
+        <div class="quadro"><h1>segurança vai além de antivirus e VPNs</h1></div>
+        <div class="foto"><img src="https://pbs.twimg.com/media/GOKFNldXMAEI5sf?format=jpg&name=large" alt="robin"></div>
+    </div>
 </body>
 
 </html>
