adicionados 2 novos painéis

--- a/Index.html
+++ b/Index.html
@@ -9,10 +9,39 @@
 
 
 <body>
-    <div id="painel">
-        <div class="quadro"><h1>segurança vai além de antivirus e VPNs</h1></div>
-        <div class="foto"><img src="https://pbs.twimg.com/media/GOKFNldXMAEI5sf?format=jpg&name=large" alt="robin"></div>
+    <div class="painel">
+        <div class="titulo">
+            <h1>Segurança vai além de antivirus e VPNs</h1>
+            <h2 class="texto"><br>Hoje em dia, existem diversas maneiras pelas quais pessoas mal-intencionadas podem obter suas informações na internet. Para se proteger de possíveis ataques, é essencial prestar atenção até mesmo aos links que você acessa.</h2>
+        </div>
+        <div class="foto">
+            <!-- <img src="https://pbs.twimg.com/media/GOKFNldXMAEI5sf?format=jpg&name=large" alt="robin"> -->
+            <iframe width="1000vw" height="450vh" src="https://www.youtube.com/embed/QFdkggG34wo?si=T-75uf1nyPozVI0Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
     </div>
+
+    <!--Segundo painel -->
+    <div class="painel">
+        <div class="foto">
+            <iframe width="1000vw" height="450vh" src="https://www.youtube.com/embed/Zw2ODkqZrbM?si=zKDugZRm4YZY7KAB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+        <div class="titulo">
+            <h1>Relacionamentos online</h1>
+            <h2 class="texto"><br>Atualmente, é muito fácil encontrar pessoas na internet, e muitas amizades começam completamente online. Essas conexões podem surgir a partir de comentários em posts de redes sociais, em jogos online, ou até mesmo ao pesquisar assuntos escolares. Por isso, é sempre necessário redobrar a atenção ao interagir com pessoas na internet.</h2>
+        </div>
+    </div>
+
+
+    <div class="painel">
+        <div class="titulo">
+            <h1>Segurança vai além de antivirus e VPNs</h1>
+            <h2 class="texto"><br>Hoje em dia na internet existem várias formas que pessoas mal intencionadas podem fazer para conseguir suas informações, para se protejer de possíveis ataques é necessário prestar atenção até mesmo nos links em que você acessa</h2>
+        </div>
+        <div class="foto">
+            <iframe width="1000vw" height="450vh" src="https://www.youtube.com/embed/t7RTTG2WFxg?si=p6PkRbMJOUCP0y07" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>    
+        </div>
+    </div>
+
 </body>
 
 </html>
